--- a/index.html
+++ b/index.html
@@ -34,6 +34,113 @@
             </div>
         </div>
     </header>
-    
+    <main style="margin-left: 12%; display: flex;">
+        <div class="cards">
+            <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-1.png" alt="">
+            <h2 style="margin: 18px;">Nymar Jr</h2>
+            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
+                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
+                much liquid evaporates;</p>
+        </div>
+        <div class="cards">
+            <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-2.png" alt="">
+            <h2 style="margin: 18px;">Lionel Messi</h2>
+            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
+                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
+                much liquid evaporates;</p>
+        </div>
+        <div class="cards">
+            <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-3.png" alt="">
+            <h2 style="margin: 18px;">Cristiano Ronaldo</h2>
+            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
+                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
+                much liquid evaporates;</p>
+        </div>
+    </main>
+
+    <main style="margin-left: 12%; display: flex;">
+        <div class="cards">
+            <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-4.png" alt="">
+            <h2 style="margin: 18px;">Paulo Dybala</h2>
+            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
+                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
+                much liquid evaporates;</p>
+        </div>
+        <div class="cards">
+            <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-5.png" alt="">
+            <h2 style="margin: 18px;">Mesut Ozil</h2>
+            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
+                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
+                much liquid evaporates;</p>
+        </div>
+        <div class="cards">
+            <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-6.png" alt="">
+            <h2 style="margin: 18px;">Mauro Icardi</h2>
+            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
+                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
+                much liquid evaporates;</p>
+        </div>
+    </main>
+
+    <main style="margin-left: 12%; display: flex;">
+        <div class="cards">
+            <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-7.png" alt="">
+            <h2 style="margin: 18px;">Di Maria</h2>
+            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
+                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
+                much liquid evaporates;</p>
+        </div>
+        <div class="cards">
+            <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-8.png" alt="">
+            <h2 style="margin: 18px;">Kylian Mbappé</h2>
+            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
+                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
+                much liquid evaporates;</p>
+        </div>
+        <div class="cards">
+            <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-9.png" alt="">
+            <h2 style="margin: 18px;">Mohamed Salah</h2>
+            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
+                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
+                much liquid evaporates;</p>
+        </div>
+    </main>
+
+    <main style="margin-left: 12%; display: flex;">
+        <div class="cards">
+            <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-10.png" alt="">
+            <h2 style="margin: 18px;">Harry Kane</h2>
+            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
+                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
+                much liquid evaporates;</p>
+        </div>
+        <div class="cards">
+            <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-11.png" alt="">
+            <h2 style="margin: 18px;">Kevin De Bruyne</h2>
+            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
+                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
+                much liquid evaporates;</p>
+        </div>
+        <div class="cards">
+            <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-12.png" alt="">
+            <h2 style="margin: 18px;">Philippe Coutinho</h2>
+            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
+                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
+                much liquid evaporates;</p>
+        </div>
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="last-box">
+                <div class=""><img src="./images/Logo.png" alt=""></div>
+                <div class="icons">
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-dribbble"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-youtube"></i>
+                <div class=""></div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
