--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/6b1f124351.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header style="margin-bottom: 45px;">
         <nav>
             <span>
                 <a href="">Home</a>
@@ -38,23 +38,17 @@
         <div class="cards">
             <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-1.png" alt="">
             <h2 style="margin: 18px;">Nymar Jr</h2>
-            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
-                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
-                much liquid evaporates;</p>
+            <p style="margin: 18px;">Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the Argentina national team.</p>
         </div>
         <div class="cards">
             <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-2.png" alt="">
             <h2 style="margin: 18px;">Lionel Messi</h2>
-            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
-                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
-                much liquid evaporates;</p>
+            <p style="margin: 18px;">Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the Argentina national team.</p>
         </div>
         <div class="cards">
             <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-3.png" alt="">
             <h2 style="margin: 18px;">Cristiano Ronaldo</h2>
-            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
-                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
-                much liquid evaporates;</p>
+            <p style="margin: 18px;">Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the Argentina national team.</p>
         </div>
     </main>
 
@@ -62,23 +56,17 @@
         <div class="cards">
             <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-4.png" alt="">
             <h2 style="margin: 18px;">Paulo Dybala</h2>
-            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
-                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
-                much liquid evaporates;</p>
+            <p style="margin: 18px;">Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the Argentina national team.</p>
         </div>
         <div class="cards">
             <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-5.png" alt="">
             <h2 style="margin: 18px;">Mesut Ozil</h2>
-            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
-                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
-                much liquid evaporates;</p>
+            <p style="margin: 18px;">Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the Argentina national team.</p>
         </div>
         <div class="cards">
             <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-6.png" alt="">
             <h2 style="margin: 18px;">Mauro Icardi</h2>
-            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
-                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
-                much liquid evaporates;</p>
+            <p style="margin: 18px;">Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the Argentina national team.</p>
         </div>
     </main>
 
@@ -86,61 +74,51 @@
         <div class="cards">
             <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-7.png" alt="">
             <h2 style="margin: 18px;">Di Maria</h2>
-            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
-                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
-                much liquid evaporates;</p>
+            <p style="margin: 18px;">Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the Argentina national team.</p>
         </div>
         <div class="cards">
             <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-8.png" alt="">
             <h2 style="margin: 18px;">Kylian Mbappé</h2>
-            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
-                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
-                much liquid evaporates;</p>
+            <p style="margin: 18px;">Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the Argentina national team.</p>
         </div>
         <div class="cards">
             <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-9.png" alt="">
             <h2 style="margin: 18px;">Mohamed Salah</h2>
-            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
-                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
-                much liquid evaporates;</p>
+            <p style="margin: 18px;">Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the Argentina national team.</p>
         </div>
     </main>
 
-    <main style="margin-left: 12%; display: flex;">
+    <main style="margin-left: 12%; display: flex; margin-bottom: 70px;">
         <div class="cards">
             <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-10.png" alt="">
             <h2 style="margin: 18px;">Harry Kane</h2>
-            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
-                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
-                much liquid evaporates;</p>
+            <p style="margin: 18px;">Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the Argentina national team.</p>
         </div>
         <div class="cards">
             <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-11.png" alt="">
             <h2 style="margin: 18px;">Kevin De Bruyne</h2>
-            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
-                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
-                much liquid evaporates;</p>
+            <p style="margin: 18px;">Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the Argentina national team.</p>
         </div>
         <div class="cards">
             <img style="width: 90%; margin: 17.5px;;" src="./images/players/player-12.png" alt="">
             <h2 style="margin: 18px;">Philippe Coutinho</h2>
-            <p style="margin: 18px;">f you don't have a rice cooker, this is the way to prepare absolutely
-                perfect rice. The liquid cooks down before you cover the pot, so you have more control over how
-                much liquid evaporates;</p>
+            <p style="margin: 18px;">Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the Argentina national team.</p>
         </div>
     </main>
     <footer>
         <div class="footer">
             <div class="last-box">
-                <div class=""><img src="./images/Logo.png" alt=""></div>
-                <div class="icons">
+                <div class="center"><img src="./images/Logo.png" alt=""></div>
+                <div class="icons center">
                     <i class="fab fa-instagram"></i>
                     <i class="fab fa-dribbble"></i>
                     <i class="fab fa-twitter"></i>
                     <i class="fab fa-youtube"></i>
-                <div class=""></div>
+                    </div>
+                <div class="copyright center">
+                    <p>Copyright © 2022 Football</p>
+                </div>
             </div>
-        </div>
     </footer>
 </body>
 </html>
